[TESTS] fix element creation tests. [UPDATE] remove early returns.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -18,7 +18,7 @@
 <link rel="import" href="../polymer-d3/polymer-d3.html">
 
 <!-- ELEMENT -->
-</head><body><polymer-element name="polymer-matrix-diagram" attributes="config width height chartTitle paddingLeft paddingRight paddingBottom paddingTop autoResize autoUpdate" assetpath="build/">
+</head><body><polymer-element name="polymer-matrix-diagram" attributes="data config width height chartTitle paddingLeft paddingRight paddingBottom paddingTop autoResize autoUpdate" assetpath="build/">
 
 	<template>
 
@@ -693,7 +693,7 @@ var // Utility to create delayed event listeners:
 // VARIABLES //
 
 var EVENTS = [
-	
+	'data',
 
 	'width',
 	'height',
@@ -841,6 +841,9 @@ Chart.prototype.init = function() {
 
 	// Events: (hint an array)
 	this.events = EVENTS;
+
+	// Data: (hint an array)
+	this.data = [];
 
 	// Private methods...
 
@@ -1057,7 +1060,7 @@ Chart.prototype.clear = function() {
 	// TODO: should meta data (e.g., title) be cleared as well?
 
 	// Remove the graph:
-	
+	this.data.length = 0;
 
 	// TODO: need call update method
 
