[UPDATE] row sort functionality.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -628,6 +628,10 @@ table {
 	stroke-width: 1;
 }
 
+.name {
+	cursor: pointer;
+}
+
 .meta .title {
 	display: block;
 	/*font-size: 2em;*/
@@ -886,6 +890,8 @@ Chart.prototype.init = function() {
 	this._resetCells = this.resetCells.bind( this );
 
 	// Interaction...
+	this._onRowClick = this.onRowClick.bind( this );
+	this._onColClick = this.onColClick.bind( this );
 	this._onResize = delayed( this.onResize.bind( this ), 400 );
 
 	// Element cache...
@@ -1076,11 +1082,13 @@ Chart.prototype.createRows = function() {
 		.attr( 'x1', this.graphWidth() );
 
 	this.$.rows.append( 'svg:text' )
+		.attr( 'class', 'noselect name' )
 		.attr( 'x', -6 )
 		.attr( 'y', this._yScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'end' )
-		.text( this._getRowName );
+		.text( this._getRowName )
+		.on( 'click', this._onRowClick );
 
 	this.$.rows.each( this._createCells );
 
@@ -1106,11 +1114,13 @@ Chart.prototype.createCols = function() {
 		.attr( 'x1', -this.graphHeight() );
 
 	this.$.cols.append( 'svg:text' )
+		.attr( 'class', 'noselect name' )
 		.attr( 'x', 6 )
 		.attr( 'y', this._xScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'start' )
-		.text( this._getColName );
+		.text( this._getColName )
+		.on( 'click', this._onColClick );
 
 	return this;
 }; // end METHOD createCols()
@@ -1210,11 +1220,13 @@ Chart.prototype.resetRows = function() {
 		.attr( 'x1', this.graphWidth() );
 
 	rows.append( 'svg:text' )
+		.attr( 'class', 'noselect name' )
 		.attr( 'x', -6 )
 		.attr( 'y', this._yScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'end' )
-		.text( this._getRowName );
+		.text( this._getRowName )
+		.on( 'click', this._onRowClick );
 
 	this.$.rows = rows;
 
@@ -1248,11 +1260,13 @@ Chart.prototype.resetCols = function() {
 		.attr( 'x1', -this.graphHeight() );
 
 	cols.append( 'svg:text' )
+		.attr( 'class', 'noselect name' )
 		.attr( 'x', 6 )
 		.attr( 'y', this._xScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'start' )
-		.text( this._getColName );
+		.text( this._getColName )
+		.on( 'click', this._onColClick );
 
 	// Cache a reference to the columns:
 	this.$.cols = cols;
@@ -1292,6 +1306,30 @@ Chart.prototype.resetCells = function( d, i ) {
 
 	return this;
 }; // end METHOD resetCells()
+
+/**
+* METHOD: rowOrder( arr )
+*	Update the row order.
+*
+* @param {Array} arr - order
+*/
+Chart.prototype.rowOrder = function( arr ) {
+	var yScale = this._yScale,
+		selection;
+
+	yScale.domain( arr );
+
+	selection = this.$.marks.transition()
+		.duration( 2500 );
+
+    selection.selectAll( '.row' )
+		.delay( function ( d, i ) {
+			return yScale( i ) * 4;
+		})
+		.attr( 'transform', this._y );
+
+	return this;
+}; // end METHOD rowOrder()
 
 /**
 * METHOD: graphWidth()
@@ -1762,6 +1800,38 @@ Chart.prototype.autoResizeChanged = function( oldVal, newVal ) {
 		'curr': newVal
 	});
 }; // end METHOD autoResizeChanged()
+
+/**
+* METHOD: onRowClick( d, i )
+*	Click listener for rows.
+*
+* @param {String} d - row name
+* @param {Number} i - row index
+* @returns {Boolean} false
+*/
+Chart.prototype.onRowClick = function( d, i ) {
+	var evt = this._d3.event;
+	evt.datum = d;
+	evt.index = i;
+	this.fire( 'clicked.row', evt );
+	return false;
+}; // end METHOD onRowClick()
+
+/**
+* METHOD: onColClick( d, i )
+*	Click listener for columns.
+*
+* @param {String} d - row name
+* @param {Number} i - row index
+* @returns {Boolean} false
+*/
+Chart.prototype.onColClick = function( d, i ) {
+	var evt = this._d3.event;
+	evt.datum = d;
+	evt.index = i;
+	this.fire( 'clicked.col', evt );
+	return false;
+}; // end METHOD onColClick()
 
 /**
 * METHOD: onResize()
