[UPDATE] README. General evt emit.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -719,6 +719,7 @@ var EVENTS = [
 	'clicked',
 	'clicked.row',
 	'clicked.col',
+	'clicked.cell',
 
 	'hovered',
 	'hovered.row',
@@ -1319,8 +1320,7 @@ Chart.prototype.resetCols = function() {
 * @returns {DOMElement} element instance
 */
 Chart.prototype.resetCells = function( d, i ) {
-	var row,
-		cells;
+	var row, cells;
 
 	row = this._d3.select( this.$.rows[0][i] );
 
@@ -1432,7 +1432,7 @@ Chart.prototype.cx = function( d, i ) {
 
 /**
 * METHOD: getRowName( d, i )
-*	Returns a row name based on a provided index.
+*	Returns a row name.
 *
 * @param {Array} d - datum
 * @param {Number} i - index
@@ -1444,7 +1444,7 @@ Chart.prototype.getRowName = function( d ) {
 
 /**
 * METHOD: getColName( d, i )
-*	Returns a column name based on a provided index.
+*	Returns a column name.
 *
 * @param {Array} d - datum
 * @param {Number} i - index
@@ -1857,6 +1857,7 @@ Chart.prototype.onRowClick = function( d, i ) {
 	evt.datum = d;
 	evt.index = i;
 	this.fire( 'clicked.row', evt );
+	this.fire( 'clicked', evt );
 	return false;
 }; // end METHOD onRowClick()
 
@@ -1873,6 +1874,7 @@ Chart.prototype.onColClick = function( d, i ) {
 	evt.datum = d;
 	evt.index = i;
 	this.fire( 'clicked.col', evt );
+	this.fire( 'clicked', evt );
 	return false;
 }; // end METHOD onColClick()
 
@@ -1903,6 +1905,7 @@ Chart.prototype.onCellClick = function( d, i ) {
 	evt.row = j;
 
 	this.fire( 'clicked.cell', evt );
+	this.fire( 'clicked', evt );
 	return false;
 }; // end METHOD onCellClick()
 
@@ -1922,6 +1925,7 @@ Chart.prototype.onRowHover = function( d, i ) {
 	evt.datum = d;
 	evt.index = i;
 	this.fire( 'hovered.row', evt );
+	this.fire( 'hovered', evt );
 	return false;
 }; // end METHOD onRowHover()
 
@@ -1941,6 +1945,7 @@ Chart.prototype.onColHover = function( d, i ) {
 	evt.datum = d;
 	evt.index = i;
 	this.fire( 'hovered.col', evt );
+	this.fire( 'hovered', evt );
 	return false;
 }; // end METHOD onColHover()
 
@@ -1973,6 +1978,7 @@ Chart.prototype.onCellHover = function( d, i ) {
 	evt.row = j;
 
 	this.fire( 'hovered.cell', evt );
+	this.fire( 'hovered', evt );
 	return false;
 }; // end METHOD onCellHover()
 
@@ -1992,6 +1998,7 @@ Chart.prototype.onRowHoverEnd = function( d, i ) {
 	evt.datum = d;
 	evt.index = i;
 	this.fire( 'hoverended.row', evt );
+	this.fire( 'hoverended', evt );
 	return false;
 }; // end METHOD onRowHoverEnd()
 
@@ -2011,6 +2018,7 @@ Chart.prototype.onColHoverEnd = function( d, i ) {
 	evt.datum = d;
 	evt.index = i;
 	this.fire( 'hoverended.col', evt );
+	this.fire( 'hoverended', evt );
 	return false;
 }; // end METHOD onColHoverEnd()
 
@@ -2043,6 +2051,7 @@ Chart.prototype.onCellHoverEnd = function( d, i ) {
 	evt.row = j;
 
 	this.fire( 'hoverended.cell', evt );
+	this.fire( 'hoverended', evt );
 	return false;
 }; // end METHOD onCellHoverEnd()
 
