[UPDATE] expose a the transition duration.

--- a/src/polymer-matrix-diagram.html
+++ b/src/polymer-matrix-diagram.html
@@ -21,7 +21,7 @@
 <link rel="import" href="../../polymer-d3/polymer-d3.html">
 
 <!-- ELEMENT -->
-<polymer-element name="polymer-matrix-diagram" attributes="data config width height chartTitle paddingLeft paddingRight paddingBottom paddingTop zValue zMin zMax cScale autoResize autoUpdate">
+<polymer-element name="polymer-matrix-diagram" attributes="data config width height chartTitle paddingLeft paddingRight paddingBottom paddingTop zValue zMin zMax cScale duration autoResize autoUpdate">
 
 	<template>
 
